--- a/src/components/tarea/tarea.css
+++ b/src/components/tarea/tarea.css
@@ -6,4 +6,32 @@
     width: 100%;
     cursor: pointer;
     font-size: 17px;
+    display: flex;
+    align-items: center;
+    width: 92%;
+}
+
+.contenedorTitulo{
+    width: 70%;
+}
+
+.iconButton{
+    margin-left: 10px;
+    font-size: 20px;
+    background-color: transparent;
+    color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 10px;
+}
+.iconButton:hover{
+
+    background-color: rgb(83, 83, 83);
+
+}
+.deleted{
+    display: none;
 }
